--- a/CSCI420Project1_Final.ipynb
+++ b/CSCI420Project1_Final.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "gSG0HKabcQGc"
       },
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "id": "LKPw0fxYpdGY"
       },
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "id": "xvQRtdpRvXQP"
       },
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "id": "FeFA9obXu_al"
       },
@@ -113,13 +113,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7-PgDiWuvx4u",
-        "outputId": "3033b5af-c10b-490f-b124-8686af36673c"
+        "outputId": "29141e1c-4f90-4534-b392-543daa73b626"
       },
       "outputs": [
         {
@@ -171,7 +171,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "source": [
+        "# Necessary to load pre-trained model from repository (student_model.dill or teacher_model.dill)\n",
+        "!pip install dill\n",
+        "import dill as pickle\n",
+        "from dill import dump, load"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N_p52xrJmq4k",
+        "outputId": "8b8f5d69-10eb-4d3b-dccf-f83fcc448a7e"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: dill in /usr/local/lib/python3.11/dist-packages (0.3.9)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "id": "T-ytrdb3v4E1"
       },
@@ -210,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "id": "ioPHT4ZhQvkr"
       },
@@ -224,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {
         "id": "8wrGY41U0ZQ8"
       },
@@ -260,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "metadata": {
         "id": "YMuKxpCyW2s9"
       },
@@ -345,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {
         "id": "JaUGYs7IIGyX"
       },
@@ -374,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 12,
       "metadata": {
         "id": "vQymnXjTOu87"
       },
@@ -407,7 +433,7 @@
         "        #print(\"Method Perplexity: \" + str(perplexity(pred_verbose)))\n",
         "        #print('\\n')\n",
         "    average_perplexity = perplexity_sum/valid_methods\n",
-        "    print(f'AVERAGE PERPLEXITY OF MODEL WITH CONTEXT SIZE {context}: {average_perplexity}')"
+        "    print(f'AVERAGE PERPLEXITY OF MODEL WITH CONTEXT SIZE {context_size}: {average_perplexity}')"
       ]
     },
     {
@@ -428,7 +454,7 @@
       "metadata": {
         "id": "ZNvCB7VkmPAp"
       },
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -442,7 +468,7 @@
       "metadata": {
         "id": "AxTbZVqBmNKp"
       },
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -456,7 +482,7 @@
       "metadata": {
         "id": "2HIWvRdbvP62"
       },
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -470,9 +496,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kf9cEpy7SrZ6",
-        "outputId": "e92a6271-d837-475c-e696-2da2dadee0ac"
+        "outputId": "bb88e714-5cef-4079-d87a-7c32641f6e72"
       },
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,9 +522,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wXLtdEl_J9e6",
-        "outputId": "03141e0f-5c72-45b5-b481-c9a4a000fd79"
+        "outputId": "c2509b94-a284-4ad6-b1cc-342a57252ea6"
       },
-      "execution_count": 19,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,9 +547,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fv_mTzbalx_x",
-        "outputId": "01ac2df3-1d15-43c1-aa11-99e0081ef47c"
+        "outputId": "eb5b6dce-face-47fc-decf-3929f2976640"
       },
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,9 +572,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sF8GKVa6lyO1",
-        "outputId": "ae0d6271-69e3-4f9b-f32d-7d8fb3b733a4"
+        "outputId": "a638df64-153c-48a6-c1b0-5ee580c8f14a"
       },
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,6 +589,7 @@
       "cell_type": "code",
       "source": [
         "# Testing best-performing student model on test set\n",
+        "# To use pre-trained .dill model, see code blocks below\n",
         "optimal_student_context = 7\n",
         "model_train = create_ngrams(student_tokens, optimal_student_context)\n",
         "evaluate_model_perplexity(test_student_methods, student_tokens, model_train, optimal_student_context)"
@@ -572,9 +599,53 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UZAjrY8sm2RS",
-        "outputId": "dddf09a4-2628-460d-8eb8-65ba31003cd5"
+        "outputId": "fae86f09-1284-4c72-e356-701521b8443e"
       },
-      "execution_count": 29,
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "AVERAGE PERPLEXITY OF MODEL WITH CONTEXT SIZE 7: 1.2497774207404262\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# CODE FOR STORING A TRAINED MODEL USING PICKLE/DILL - DOES NOT NEED TO BE RE-RUN\n",
+        "# If run, ensure optimal model was the last model trained, or model_train will be wrong\n",
+        "\"\"\"\n",
+        "with open(r'student_model.dill', 'wb') as output_file:\n",
+        "    pickle.dump(model_train, output_file)\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "id": "q_YdevtMkBZj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# If desired, load pre-trained best-performing student model from .dill file for testing\n",
+        "with open('student_model.dill', 'rb') as pickle_file:\n",
+        "    student_model = pickle.load(pickle_file)\n",
+        "\n",
+        "optimal_student_context = 7\n",
+        "evaluate_model_perplexity(test_student_methods, student_tokens, student_model, optimal_student_context)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WvvRhK4wlsWM",
+        "outputId": "a5a7a45e-cdff-4270-abcf-bc461891d56b"
+      },
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,14 +678,14 @@
       "metadata": {
         "id": "7CJ152LzJXWB"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Finds and displays average perplexity of n-gram models for n=3, n=5, n=7, n=9\n",
-        "# WARNING: This code block takes around 10 minutes to fully execute\n",
+        "# WARNING: This code block takes several minutes to fully execute\n",
         "context = 3\n",
         "model_train = create_ngrams(teacher_tokens, context)\n",
         "evaluate_model_perplexity(eval_teacher_methods, teacher_tokens, model_train, context)"
@@ -624,9 +695,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nRVR4tAVewru",
-        "outputId": "1dae919a-fcb1-4658-cc10-1ee1a061eab0"
+        "outputId": "8db68055-7fb1-4f90-c12d-9e6671d9f61c"
       },
-      "execution_count": 23,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,9 +720,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OAr1BG4JDkMp",
-        "outputId": "7cc82ef2-f5db-40ea-98e7-30a0832e5f83"
+        "outputId": "e7e2e8ea-3b3e-49df-d371-4aaee62aa956"
       },
-      "execution_count": 24,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -674,9 +745,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sRFcvW2qDlQZ",
-        "outputId": "5065765a-279d-4d24-f526-7d4b9cfc7c41"
+        "outputId": "0fcb6c4e-1ffe-4c0b-e905-596491474ac7"
       },
-      "execution_count": 25,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,20 +760,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kENFVqzA5L4n",
-        "outputId": "89e382a9-e5ca-4819-fc85-202b1b199cb1"
+        "outputId": "a0adba03-0420-4e15-f65e-7cb68dd03f95"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "AVERAGE PERPLEXITY OF MODEL WITH CONTEXT SIZE 7: 1.761250418620468\n"
+            "AVERAGE PERPLEXITY OF MODEL WITH CONTEXT SIZE 3: 1.761250418620468\n"
           ]
         }
       ],
@@ -711,6 +782,50 @@
         "optimal_teacher_context = 3\n",
         "model_train = create_ngrams(teacher_tokens, optimal_teacher_context)\n",
         "evaluate_model_perplexity(test_student_methods, teacher_tokens, model_train, optimal_teacher_context)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# CODE FOR STORING A TRAINED MODEL USING PICKLE/DILL - DOES NOT NEED TO BE RE-RUN\n",
+        "# If run, ensure optimal model was the last model trained, or model_train will be wrong\n",
+        "\"\"\"\n",
+        "with open(r'teacher_model.dill', 'wb') as output_file:\n",
+        "    pickle.dump(model_train, output_file)\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "id": "OiztgP0Injq7"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# If desired, load pre-trained best-performing teacher model from .dill file for testing\n",
+        "with open('teacher_model.dill', 'rb') as pickle_file:\n",
+        "    teacher_model = pickle.load(pickle_file)\n",
+        "\n",
+        "optimal_teacher_context = 3\n",
+        "evaluate_model_perplexity(test_student_methods, teacher_tokens, teacher_model, optimal_teacher_context)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6iAbSlHkoDdz",
+        "outputId": "bc5c98ef-b5eb-4c48-e1d2-acf11d1c1957"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "AVERAGE PERPLEXITY OF MODEL WITH CONTEXT SIZE 3: 1.761250418620468\n"
+          ]
+        }
       ]
     },
     {
@@ -735,7 +850,7 @@
       "metadata": {
         "id": "bnTutBQF3pd3"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
